@@ -8,8 +8,9 @@ nsis (2.46-8) unstable; urgency=low
     expansion.
   * Honor hardening flags.
   * Fix of mingw-w64 warnings concerning out of bounds array access.
+  * Deploy variables for path names in debian/rules.
 
- -- Thomas Gaugler <thomas@dadie.net>  Sat, 17 May 2014 19:21:44 +0200
+ -- Thomas Gaugler <thomas@dadie.net>  Sun, 18 May 2014 19:11:13 +0200
 
 nsis (2.46-7) unstable; urgency=low
 
